address function finished

--- a/user/personal-profile/personal-profile.html
+++ b/user/personal-profile/personal-profile.html
@@ -755,7 +755,7 @@
 <script src="../../kugu-asset/js/main.js"></script>
 <script src="../../js/jquery.form.js"></script>
 
-<!--address form弹窗-->
+<!--自用js文件-->
 <script src="../../js/personal-profile.js"></script>
 
 </body>
