optimise personal-profile.html

--- a/user/personal-profile/personal-profile.html
+++ b/user/personal-profile/personal-profile.html
@@ -507,48 +507,56 @@
                             <div class="my-account-address account-wrapper">
                                 <h4 class="account-title col-md-12">Address</h4>
                                 <div id="address-form">
-                                    <!-- <form id="" method="post" action="address-manage.php"
-                                           style="padding: 0 20px">
-                                         <input id="address-form-type" type="hidden" name="type" value="">
-                                         <input id="address-form-id" type="hidden" name="id" value="">
-                                         <div class="row">
-                                             <div class="col-md-4">
-                                                 <div class="single-form">
-                                                     <input id="form-province" type="text" name="province" placeholder="Province">
-                                                 </div>
-                                             </div>
-                                             <div class="col-md-4">
-                                                 <div class="single-form">
-                                                     <input id="form-city" type="text" name="city" placeholder="City">
-                                                 </div>
-                                             </div>
-                                             <div class="col-md-4">
-                                                 <div class="single-form">
-                                                     <input id="form-area" type="text" name="area" placeholder="Area">
-                                                 </div>
-                                             </div>
-                                             <div class="col-md-12">
-                                                 <div class="single-form">
-                                                     <input id="form-detail" type="text" name="detail" placeholder="Detail Address">
-                                                 </div>
-                                             </div>
-                                             <div class="col-md-6">
-                                                 <div class="single-form">
-                                                     <input id="form-name" type="text" name="name" placeholder="Name">
-                                                 </div>
-                                             </div>
-                                             <div class="col-md-6">
-                                                 <div class="single-form">
-                                                     <input id="form-phone" type="text" name="phone" placeholder="Phone Number">
-                                                 </div>
-                                             </div>
-                                             <div class="col-md-6 m-auto">
-                                                 <div class="single-form">
-                                                     <button class="btn btn-primary m-auto" style="display: block">Confirm</button>
-                                                 </div>
-                                             </div>
-                                         </div>
-                                     </form>-->
+                                    <!--<form id="" method="post" action="address-manage.php"
+                                          style="padding: 0 20px">
+                                        <input id="address-form-type" type="hidden" name="type" value="">
+                                        <input id="address-form-id" type="hidden" name="id" value="">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="single-form">
+                                                    <input id="form-province" type="text" name="province"
+                                                           placeholder="Province*" required="required">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="single-form">
+                                                    <input id="form-city" type="text" name="city" placeholder="City*"
+                                                           required="required">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="single-form">
+                                                    <input id="form-area" type="text" name="area" placeholder="Area*"
+                                                           required="required">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-12">
+                                                <div class="single-form">
+                                                    <input id="form-detail" type="text" name="detail"
+                                                           placeholder="Detail Address">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="single-form">
+                                                    <input id="form-name" type="text" name="name" placeholder="Name*"
+                                                           required="required">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="single-form">
+                                                    <input id="form-phone" type="text" name="phone"
+                                                           placeholder="Phone Number*" required="required">
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 m-auto">
+                                                <div class="single-form">
+                                                    <button class="btn btn-primary m-auto" style="display: block">
+                                                        Confirm
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>-->
                                 </div>
                                 <div class="row">
                                 </div>
@@ -563,22 +571,26 @@
                                         <div class="row">
                                             <div class="col-md-6">
                                                 <div class="single-form">
-                                                    <input type="text" name="first_name" placeholder="First Name">
+                                                    <input id="info-first-name" type="text" name="first_name"
+                                                           placeholder="First Name">
                                                 </div>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="single-form">
-                                                    <input type="text" name="last_name" placeholder="Last Name">
+                                                    <input id="info-last-name" type="text" name="last_name"
+                                                           placeholder="Last Name">
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
                                                 <div class="single-form">
-                                                    <input type="text" name="email" placeholder="Email address">
+                                                    <input id="info-email" type="text" name="email"
+                                                           placeholder="Email address">
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
                                                 <div class="single-form">
-                                                    <input type="text" name="phone" placeholder="Phone number">
+                                                    <input id="info-phone" type="text" name="phone"
+                                                           placeholder="Phone number">
                                                 </div>
                                             </div>
                                             <div class="col-md-12">
