feature: Add blog frontend code

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <div class="main-wrapper">
 
     <!--Header Section Start-->
-    <div class="header-section d-none d-lg-block">
+    <div class="header-section d-none d-lg-block" >
+<!--    背景透明    -->
+<!--    style="background: linear-gradient(0deg, rgba(255,255,255,0.3)0%, rgba(145,145,145,0.3)100%)!important"    -->
         <div class="main-header">
             <div class="container position-relative">
                 <div class="row align-items-center">
@@ -475,40 +477,86 @@
     </div>
     <!--New Product End-->
 
-    <!--Testimonial Start-->
-    <div class="testimonial-area" style="background-image: url(assets/images/testimonial-bg.jpg);">
+    <!--Blog Start-->
+    <div class="blog-area blog-bg section-padding-5">
         <div class="container">
-            <div class="swiper-container testimonial-active">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="single-testimonial text-center">
-                            <p>Come and Buy our Product!</p>
-
-                            <div class="testimonial-author">
-                                <img src="assets/images/Kyle.png" alt="">
-                                <span class="author-name">Kyle Broflovski</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="single-testimonial text-center">
-                            <p>Come and Buy our Product!</p>
-
-                            <div class="testimonial-author">
-                                <img src="assets/images/Cartman.jpg" alt="">
-                                <span class="author-name">Eric Cartman</span>
-                            </div>
-                        </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-md-9 col-sm-2">
+                    <div class="section-title text-center">
+                        <h2 class="title">Popular blogs</h2>
                     </div>
                 </div>
+            </div>
+            <div class="blog-wrapper">
+                <div class="swiper-container blog-active">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-image">
+                                    <a href="blog-single-right-sidebar.html"><img src="assets/images/blog/blog-01.jpg" alt=""></a>
+                                </div>
+                                <div class="blog-content">
+                                    <h4 class="title"><a href="blog-single-right-sidebar.html">How to cultivate a flower?</a></h4>
+                                    <div class="articles-date">
+                                        <p>By <span>  Liu Yuxin / April 13, 2021</span></p>
+                                    </div>
+                                    <p>I have been growing flowers for more than ten years. At the beginning, I raised some foliage plants and woody plants. Flowers bloom very little, the balcony looks green...</p>
 
-                <!-- Add Arrows -->
-                <div class="swiper-next"><i class="fa fa-angle-right"></i></div>
-                <div class="swiper-prev"><i class="fa fa-angle-left"></i></div>
+                                    <div class="blog-footer">
+                                        <a class="more" href="blog-single-right-sidebar.html">Continue Reading</a>
+                                        <p class="comment-count"><i class="icon-message-circle"></i> 0</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-image">
+                                    <a href="blog-single-right-sidebar.html"><img src="assets/images/blog/blog-02.jpeg" alt=""></a>
+                                </div>
+                                <div class="blog-content">
+                                    <h4 class="title"><a href="blog-single-right-sidebar.html">Family Floristry</a></h4>
+                                    <div class="articles-date">
+                                        <p>By <span>  Zhao Yiran /  April 13, 2021</span></p>
+                                    </div>
+                                    <p>While plants decorate the living room, they also increase the humidity and comfort of the air. Fresh cut flowers will bring back new ones every week. Different mood, different season, different flowers and colors...</p>
+
+                                    <div class="blog-footer">
+                                        <a class="more" href="blog-single-right-sidebar.html">Continue Reading</a>
+                                        <p class="comment-count"><i class="icon-message-circle"></i> 0</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="single-blog">
+                                <div class="blog-image">
+                                    <a href="blog-single-right-sidebar.html"><img src="assets/images/blog/blog-03.jpg" alt=""></a>
+                                </div>
+                                <div class="blog-content">
+                                    <h4 class="title"><a href="blog-single-right-sidebar.html">How to be an excellent flower Designer?</a></h4>
+                                    <div class="articles-date">
+                                        <p>By <span>  Shen Shuyi /  April 13, 2021</span></p>
+                                    </div>
+                                    <p>First of all, I would like to talk about the outstanding flower designers in my heart. They are more like artists. They just choose flowers and plants as the carrier of creation. They have excellent artistic aesthetic...</p>
+
+                                    <div class="blog-footer">
+                                        <a class="more" href="blog-single-right-sidebar.html">Continue Reading</a>
+                                        <p class="comment-count"><i class="icon-message-circle"></i> 0</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Add Arrows -->
+                    <div class="swiper-next"><i class="fa fa-angle-right"></i></div>
+                    <div class="swiper-prev"><i class="fa fa-angle-left"></i></div>
+                </div>
             </div>
         </div>
     </div>
-    <!--Testimonial End-->
+    <!--Blog End-->
 
 
 
@@ -836,9 +884,6 @@
                     <div class="swiper-prev"><i class="fa fa-angle-left"></i></div>
                 </div>
             </div>
-            <!-- Add Arrows -->
-            <div class="swiper-next d-lg-block"><i class="fa fa-angle-right"></i></div>
-            <div class="swiper-prev d-lg-block"><i class="fa fa-angle-left"></i></div>
         </div>
     </div>
     <!--New Product End-->
